--- a/prueba-tecnica-2/package.json
+++ b/prueba-tecnica-2/package.json
@@ -1,19 +1,11 @@
 {
-  "name": "prueba-tecnica",
+  "name": "prueba",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node service.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.6.3",
-    "nodemailer": "^6.9.7",
-    "sequelize": "^6.35.0"
-  }
+  "license": "ISC"
 }
